# mc_ai

./: .gitignore  pyproject.toml  setup.cfg
mc_ai/: arena.py  env.py  mc_types.py  mob.py  to_mcfunction.py  view.py
mc_ai/models/: basic.py
mcfunction_lib/: __init__.py  build.py  compile.py  decorators.py  inference.py  input.py  interfaces.py  macros.py  mc_function.py  mcfunction.py  uuid.py
minecraft_ai/: arena.py  env.py  fsp.py  mc_types.py  mob.py  to_mcfunction.py  view.py
minecraft_ai/models/: basic.py
notebooks/: custom_ai.ipynb  knockback_analysis.ipynb  knockback_analysis2.ipynb  movement_analysis.ipynb  movement_analysis2.ipynb  movement_analysis3.ipynb
scripts/: build_dataset.py  fsp.py  on_policy_dataset.py  random_dataset.py  to_module.py  train_test.py
