[metadata]
name = mc-ai
version = 0.0.1
author = Victor Villin
author_email = victor.villin@unine.ch
description = Building custom AIs for vanilla Minecraft through Reinforcement Learning
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    minecraft_ai
    mcfunction_lib

include_package_data = True
python_requires = >=3.10
install_requires =
    dm-sonnet
    dm-tree